# swagger-codegen-demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
scripts/linux/: bootstrap.sh  build.sh  configure.sh
scripts/linux/detail/: generate-map.ingest.api.sh  openapi-generator-cli.sh
scripts/windows/: bootstrap.bat  build.bat  configure.bat  install.bat  test.bat
scripts/windows/detail/: hermes-ng.bat  path.bat  petstore.bat  routing-api.bat  swagger-codegen-cli-adapter.bat  swagger-codegen-cli.bat
src/: main.cpp
